--- a/app/javascript/flavours/glitch/locales/en.json
+++ b/app/javascript/flavours/glitch/locales/en.json
@@ -36,7 +36,7 @@
   "compose.content-type.plain": "Plain text",
   "compose_form.poll.multiple_choices": "Allow multiple choices",
   "compose_form.poll.single_choice": "Allow one choice",
-  "compose_form.spoiler": "Hide text behind warning",
+  "compose_form.spoiler": "Hide post behind a text warning",
   "confirmation_modal.do_not_ask_again": "Do not ask for confirmation again",
   "confirmations.missing_media_description.confirm": "Send anyway",
   "confirmations.missing_media_description.edit": "Edit media",
