--- a/app/javascript/mastodon/locales/en.json
+++ b/app/javascript/mastodon/locales/en.json
@@ -54,7 +54,7 @@
   "account.mute_short": "Mute",
   "account.muted": "Muted",
   "account.no_bio": "No description provided.",
-  "account.open_original_page": "Open original page",
+  "account.open_original_page": "Open on original server",
   "account.posts": "Posts",
   "account.posts_with_replies": "Posts and replies",
   "account.report": "Report @{name}",
@@ -622,9 +622,9 @@
   "sign_in_banner.sign_in": "Login",
   "sign_in_banner.sso_redirect": "Login or Register",
   "sign_in_banner.text": "Login to follow profiles or hashtags, favorite, share and reply to posts. You can also interact from your account on a different server.",
-  "status.admin_account": "Open moderation interface for @{name}",
-  "status.admin_domain": "Open moderation interface for {domain}",
-  "status.admin_status": "Open this post in the moderation interface",
+  "status.admin_account": "Moderate @{name}",
+  "status.admin_domain": "Moderate {domain}",
+  "status.admin_status": "Moderate this post",
   "status.block": "Block @{name}",
   "status.bookmark": "Bookmark",
   "status.cancel_reblog_private": "Unboost",
