Various local settings changes
Aether flavour no longer respects "advanced layout" setting in Preferences and removed auto option from Local Settings. Fixed changing layouts from local settings. Changed post collapsing to a slider. Various locale changes.

--- a/app/javascript/mastodon/locales/en.json
+++ b/app/javascript/mastodon/locales/en.json
@@ -414,7 +414,7 @@
   "navigation_bar.edit_profile": "Edit profile",
   "navigation_bar.explore": "Explore",
   "navigation_bar.favourites": "Favorites",
-  "navigation_bar.filters": "Muted words",
+  "navigation_bar.filters": "Manage filters",
   "navigation_bar.follow_requests": "Follow requests",
   "navigation_bar.followed_tags": "Followed hashtags",
   "navigation_bar.follows_and_followers": "Follows and followers",
