--- a/app/javascript/flavours/aether/locales/en.json
+++ b/app/javascript/flavours/aether/locales/en.json
@@ -67,8 +67,8 @@
   "layout.auto": "Auto",
   "layout.desktop": "Advanced",
   "layout.hint.auto": "Automatically chose layout based on “Enable advanced web interface” setting and screen size.",
-  "layout.hint.desktop": "Use multiple-column layout regardless of the “Enable advanced web interface” setting or screen size.",
-  "layout.hint.single": "Use single-column layout regardless of the “Enable advanced web interface” setting or screen size.",
+  "layout.hint.desktop": "Allows you to configure multiple columns to see as much information as you want (e.g. home, notifications, timeline, lists and hashtags).",
+  "layout.hint.single": "Use the default simple layout. This lays out information in a less compact and more readable way.",
   "layout.single": "Normal",
   "media_gallery.sensitive": "Sensitive",
   "moved_to_warning": "This account is marked as moved to {moved_to_link}, and may thus not accept new follows.",
