--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -38,7 +38,7 @@ en:
       reconfirmation_instructions:
         explanation: Confirm the new address to change your email.
         extra: If this change wasn't initiated by you, please ignore this email. The email address for the Mastodon account won't change until you access the link above.
-        subject: 'Mastodon: Confirm email for %{instance}'
+        subject: 'Confirm email for %{instance}'
         title: Verify email address
       reset_password_instructions:
         action: Change password
