Column size changes
Made the columns default to a smaller width on the normal layout but enabled the columns to

--- a/app/javascript/flavours/aether/locales/en.json
+++ b/app/javascript/flavours/aether/locales/en.json
@@ -188,8 +188,8 @@
   "settings.swipe_to_change_columns": "Allow swiping to change columns (Mobile only)",
   "settings.tag_misleading_links": "Tag misleading links",
   "settings.tag_misleading_links.hint": "Add a visual indication with the link target host to every link not mentioning it explicitly",
-  "settings.wide_view": "Wide view (Advanced mode only)",
-  "settings.wide_view_hint": "Stretches columns to better fill the available space.",
+  "settings.wide_view": "Wide view",
+  "settings.wide_view_hint": "Enlarges and stretches columns to better fill the available space.",
   "status.collapse": "Collapse",
   "status.has_audio": "Features attached audio files",
   "status.has_pictures": "Features attached pictures",
