--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1782,7 +1782,7 @@ en:
       title: A new sign-in
     warning:
       appeal: Submit an appeal
-      appeal_description: If you believe this is an error, you can submit an appeal to the staff of %{instance}.
+      appeal_description: If you believe this is an error, you can submit an appeal to the staff of %{instance}. Staff cannot respond to appeals so if you have any questions, please contact the staff through other means such as those listed on the website's About page. 
       categories:
         spam: Spam
         violation: Content violates the following community guidelines
@@ -1831,7 +1831,7 @@ en:
   verification:
     extra_instructions_html: <strong>Tip:</strong> The link on your website can be invisible. The important part is <code>rel="me"</code> which prevents impersonation on websites with user-generated content. You can even use a <code>link</code> tag in the header of the page instead of <code>a</code>, but the HTML must be accessible without executing JavaScript.
     here_is_how: Here's how
-    hint_html: "<strong>Verifying your identity on Mastodon is for everyone.</strong> Based on open web standards, now and forever free. All you need is a personal website that people recognize you by. When you link to this website from your profile, we will check that the website links back to your profile and show a visual indicator on it."
+    hint_html: "<strong>Verify your identity!</strong> All you need is a personal website that people recognize you by. When you link to this website from your profile, we will check that the website links back to your profile and show a visual indicator on it."
     instructions_html: Copy and paste the code below into the HTML of your website. Then add the address of your website into one of the extra fields on your profile from the "Edit profile" tab and save changes.
     verification: Verification
     verified_links: Your verified links
