--- a/app/javascript/flavours/aether/locales/en.json
+++ b/app/javascript/flavours/aether/locales/en.json
@@ -40,7 +40,7 @@
   "confirmation_modal.do_not_ask_again": "Do not ask for confirmation again",
   "confirmations.deprecated_settings.confirm": "Use Mastodon preferences",
   "confirmations.deprecated_settings.message": "Some of the glitch-soc device-specific {app_settings} you are using have been replaced by Mastodon {preferences} and will be overriden:",
-  "confirmations.missing_media_description.confirm": "Send anyway",
+  "confirmations.missing_media_description.confirm": "Post anyway",
   "confirmations.missing_media_description.edit": "Edit media",
   "confirmations.missing_media_description.message": "At least one media attachment is lacking a description. Consider describing all media attachments for the visually impaired before sending your post.",
   "confirmations.unfilter.author": "Author",
