Userpage redesign and locale changes

--- a/app/javascript/mastodon/locales/es-AR.json
+++ b/app/javascript/mastodon/locales/es-AR.json
@@ -139,11 +139,12 @@
   "compose.published.open": "Abrir",
   "compose.saved.body": "Mensaje guardado.",
   "compose_form.direct_message_warning_learn_more": "Aprendé más",
-  "compose_form.encryption_warning": "Los mensajes en Mastodon no están cifrados de extremo a extremo. No compartas ninguna información sensible al usar Mastodon.",
+  "compose_form.encryption_warning": "Los mensajes en Mastodon no están cifrados de extremo a extremo. No compartas ninguna información sensible.",
+  "compose_form.hashtag_placeholder": "Agregá #hashtags a tu post",
   "compose_form.hashtag_warning": "Este mensaje no se mostrará bajo ninguna etiqueta porque no es público. Sólo los mensajes públicos se pueden buscar por etiquetas.",
   "compose_form.lock_disclaimer": "Tu cuenta no es {locked}. Todos pueden seguirte para ver tus mensajes marcados como \"Sólo para seguidores\".",
   "compose_form.lock_disclaimer.lock": "privada",
-  "compose_form.placeholder": "¿Qué onda? Recuerda usar el botón CW para contenido de índole sexual o que pueda afectar la sensibilidad de otros.",
+  "compose_form.placeholder": "¿Qué onda?",
   "compose_form.poll.add_option": "Agregá una opción",
   "compose_form.poll.duration": "Duración de la encuesta",
   "compose_form.poll.option_placeholder": "Opción {number}",
@@ -661,16 +662,17 @@
   "status.sensitive_warning": "Contenido sensible",
   "status.share": "Compartir",
   "status.show_filter_reason": "Mostrar de todos modos",
-  "status.show_less": "Mostrar menos",
-  "status.show_less_all": "Mostrar menos para todo",
-  "status.show_more": "Mostrar más",
-  "status.show_more_all": "Mostrar más para todo",
+  "status.show_less": "Ocultar",
+  "status.show_less_all": "Ocultar todo",
+  "status.show_more": "Ver",
+  "status.show_more_all": "Ver todo",
   "status.show_original": "Mostrar original",
   "status.title.with_attachments": "{user} envió {attachmentCount, plural, one {un adjunto} other {{attachmentCount} adjuntos}}",
   "status.translate": "Traducir",
   "status.translated_from_with": "Traducido desde el {lang} vía {provider}",
   "status.uncached_media_warning": "Previsualización no disponible",
   "status.unmute_conversation": "Dejar de silenciar conversación",
+  "status.unlabeled": "Contenido sensible sin etiquetar",
   "status.unpin": "Dejar de fijar",
   "subscribed_languages.lead": "Después del cambio, sólo los mensajes en los idiomas seleccionados aparecerán en tu línea temporal Principal y en las líneas de tiempo de lista. No seleccionés ningún idioma para poder recibir mensajes en todos los idiomas.",
   "subscribed_languages.save": "Guardar cambios",
