--- a/app/javascript/mastodon/locales/es-MX.json
+++ b/app/javascript/mastodon/locales/es-MX.json
@@ -139,11 +139,12 @@
   "compose.published.open": "Abrir",
   "compose.saved.body": "Publicación guardada.",
   "compose_form.direct_message_warning_learn_more": "Aprender mas",
-  "compose_form.encryption_warning": "Las publicaciones en Mastodon no están cifradas de extremo a extremo. No comparta ninguna información sensible en Mastodon.",
+  "compose_form.encryption_warning": "Las publicaciones en Mastodon no están cifradas de extremo a extremo. No comparta ninguna información sensible.",
+  "compose_form.hashtag_placeholder": "Agregá #hashtags a tu post",
   "compose_form.hashtag_warning": "Este toot no será listado bajo ningún hashtag dado que no es público. Solo toots públicos pueden ser buscados por hashtag.",
   "compose_form.lock_disclaimer": "Tu cuenta no está bloqueada. Todos pueden seguirte para ver tus toots solo para seguidores.",
   "compose_form.lock_disclaimer.lock": "bloqueado",
-  "compose_form.placeholder": "¿En qué estás pensando? Recuerda usar el botón CW para contenido de índole sexual o que pueda afectar la sensibilidad de otros.",
+  "compose_form.placeholder": "¿En qué estás pensando?",
   "compose_form.poll.add_option": "Añadir una opción",
   "compose_form.poll.duration": "Duración de la encuesta",
   "compose_form.poll.option_placeholder": "Elección {number}",
@@ -661,16 +662,17 @@
   "status.sensitive_warning": "Contenido sensible",
   "status.share": "Compartir",
   "status.show_filter_reason": "Mostrar de todos modos",
-  "status.show_less": "Mostrar menos",
-  "status.show_less_all": "Mostrar menos para todo",
-  "status.show_more": "Mostrar más",
-  "status.show_more_all": "Mostrar más para todo",
+  "status.show_less": "Ocultar",
+  "status.show_less_all": "Ocultar todo",
+  "status.show_more": "Ver",
+  "status.show_more_all": "Ver todo",
   "status.show_original": "Mostrar original",
   "status.title.with_attachments": "{user} ha publicado {attachmentCount, plural, one {un adjunto} other {{attachmentCount} adjuntos}}",
   "status.translate": "Traducir",
   "status.translated_from_with": "Traducido del {lang} usando {provider}",
   "status.uncached_media_warning": "Vista previa no disponible",
   "status.unmute_conversation": "Dejar de silenciar conversación",
+  "status.unlabeled": "Contenido sensible sin etiquetar",
   "status.unpin": "Dejar de fijar",
   "subscribed_languages.lead": "Solo las publicaciones en los idiomas seleccionados aparecerán en tu inicio y enlistará las líneas de tiempo después del cambio. Selecciona ninguno para recibir publicaciones en todos los idiomas.",
   "subscribed_languages.save": "Guardar cambios",
