--- a/app/javascript/mastodon/locales/es.json
+++ b/app/javascript/mastodon/locales/es.json
@@ -139,7 +139,8 @@
   "compose.published.open": "Abrir",
   "compose.saved.body": "Publicación guardada.",
   "compose_form.direct_message_warning_learn_more": "Aprender más",
-  "compose_form.encryption_warning": "Las publicaciones en Mastodon no están cifradas de extremo a extremo. No comparta ninguna información sensible en Mastodon.",
+  "compose_form.encryption_warning": "Las publicaciones en Mastodon no están cifradas de extremo a extremo. No comparta ninguna información sensible.",
+  "compose_form.hashtag_placeholder": "Agregá #hashtags a tu post",
   "compose_form.hashtag_warning": "Esta publicación no se mostrará bajo ninguna etiqueta, ya que no es pública. Solo las publicaciones públicas pueden ser buscadas por etiqueta.",
   "compose_form.lock_disclaimer": "Tu cuenta no está {locked}. Todos pueden seguirte para ver tus publicaciones solo para seguidores.",
   "compose_form.lock_disclaimer.lock": "bloqueado",
@@ -661,16 +662,17 @@
   "status.sensitive_warning": "Contenido sensible",
   "status.share": "Compartir",
   "status.show_filter_reason": "Mostrar de todos modos",
-  "status.show_less": "Mostrar menos",
-  "status.show_less_all": "Mostrar menos para todo",
-  "status.show_more": "Mostrar más",
-  "status.show_more_all": "Mostrar más para todo",
+  "status.show_less": "Ocultar",
+  "status.show_less_all": "Ocultar todo",
+  "status.show_more": "Ver",
+  "status.show_more_all": "Ver todo",
   "status.show_original": "Mostrar original",
   "status.title.with_attachments": "{user} ha publicado {attachmentCount, plural, one {un adjunto} other {{attachmentCount} adjuntos}}",
   "status.translate": "Traducir",
   "status.translated_from_with": "Traducido de {lang} usando {provider}",
   "status.uncached_media_warning": "Vista previa no disponible",
   "status.unmute_conversation": "Dejar de silenciar conversación",
+  "status.unlabeled": "Contenido sensible sin etiquetar",
   "status.unpin": "Dejar de fijar",
   "subscribed_languages.lead": "Sólo los mensajes en los idiomas seleccionados aparecerán en su inicio y otras líneas de tiempo después del cambio. Seleccione ninguno para recibir mensajes en todos los idiomas.",
   "subscribed_languages.save": "Guardar cambios",
