--- a/app/javascript/mastodon/locales/en.json
+++ b/app/javascript/mastodon/locales/en.json
@@ -143,6 +143,7 @@
   "compose.saved.body": "Post saved.",
   "compose_form.direct_message_warning_learn_more": "Learn more",
   "compose_form.encryption_warning": "Posts on Ruffy are not end-to-end encrypted. Be careful what information you share here!",
+  "compose_form.hashtag_placeholder": "Add #hashtags to your post",
   "compose_form.hashtag_warning": "This post won't be listed under any hashtag as it is not public. Only public posts can be searched by hashtag.",
   "compose_form.lock_disclaimer": "Your account is not {locked}. Anyone can follow you to view your follower-only posts.",
   "compose_form.lock_disclaimer.lock": "locked",
@@ -681,6 +682,7 @@
   "status.translated_from_with": "Translated from {lang} using {provider}",
   "status.uncached_media_warning": "Preview not available",
   "status.unmute_conversation": "Unmute conversation",
+  "status.unlabeled": "Unlabeled sensitive content",
   "status.unpin": "Unpin from profile",
   "subscribed_languages.lead": "Only posts in selected languages will appear on your home and list timelines after the change. Select none to receive posts in all languages.",
   "subscribed_languages.save": "Save changes",
