--- a/app/javascript/mastodon/locales/en.json
+++ b/app/javascript/mastodon/locales/en.json
@@ -673,9 +673,9 @@
   "status.share": "Share",
   "status.show_filter_reason": "Show anyway",
   "status.show_less": "Hide",
-  "status.show_less_all": "Show less for all",
+  "status.show_less_all": "Hide all",
   "status.show_more": "Show",
-  "status.show_more_all": "Show more for all",
+  "status.show_more_all": "Show all",
   "status.show_original": "Show original",
   "status.title.with_attachments": "{user} posted {attachmentCount, plural, one {an attachment} other {{attachmentCount} attachments}}",
   "status.translate": "Translate",
