Change CW system
Locally marked sensitive posts will now state that a moderator marked it as sensitive. Remote posts now simply state "sensitive content"

--- a/app/javascript/flavours/aether/locales/en.json
+++ b/app/javascript/flavours/aether/locales/en.json
@@ -204,6 +204,7 @@
   "status.react": "Add reaction",
   "status.sensitive_toggle": "Click to view",
   "status.uncollapse": "Uncollapse",
+  "status.marked_sensitive": "Moderator marked as sensitive",
   "web_app_crash.change_your_settings": "Change your {settings}",
   "web_app_crash.content": "You could try any of the following:",
   "web_app_crash.debug_info": "Debug information",
